# FIRMWARE

./: CMakeLists.txt  TO_DO.txt  sdkconfig
main/: CMakeLists.txt  ST7920_SERIAL.c  bitmap.c  bk4819.c  jammer.c  main.c
main/include/: ST7920_SERIAL.h  bitmap.h  bk4819-regs.h  bk4819.h  pinout.h
main/include/fonts/: f10x16f.c  f10x16f.h  f6x8m.c  f6x8m.h  font.c  font.h
