idf_component_register(SRCS "batery.c" "jammer.c" "bk4819.c"
                            "main.c"
                            "ST7920_SERIAL.c"
                            "include/fonts/font.c"
                            "include/fonts/f10x16f.c"
                            "include/fonts/f6x8m.c"
                    INCLUDE_DIRS "include" "include/fonts")
